--- a/resume.html
+++ b/resume.html
@@ -280,7 +280,7 @@
     <div class="content">
       <div class="left-column">
         <div class="section">
-          <div class="section-title"><i class="fas fa-user-tie"></i><span>Professional Summary</span></div>
+          <div class="section-title"><i class="fas fa-address-card"></i><span>Professional Summary</span></div>
           <p><strong>IIT graduate</strong> and <strong>Data Scientist</strong> with around <strong>7 years</strong> of expertise in Data Science, AI, and Product Development, specializing in Generative AI, AI governance, and advanced automation. Proven ability to design, deploy, and optimize AI/ML solutions across finance, banking, energy, and environmental sectors, driving business transformation and efficiency. Skilled in machine learning, deep learning, NLP, and AI-driven automation, with hands-on experience in Python, SQL, LangChain, CrewAI, TensorFlow, PyTorch, and cloud platforms (Azure, AWS, GCP, IBM). Led AI-driven initiatives, driving efficiency, scalability, and innovation across diverse applications. Experienced in AI model deployment, workflow automation, and strategy implementation, delivering measurable business impact.</p>
         </div>
         <div class="section">
@@ -362,7 +362,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="section-title"><i class="fas fa-award"></i><span>Certifications</span></div>
+          <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
           <ul>
             <li>Northwestern University - Analytics & AI</li>
             <li>LangChain Academy - LangGraph</li>
@@ -393,7 +393,7 @@
           </ul>
         </div>
         <div class="section">
-          <div class="section-title"><i class="fas fa-tools"></i><span>Skills</span></div>
+          <div class="section-title"><i class="fas fa-brain"></i><span>Skills</span></div>
           <div class="skills-list">
             <ul>
               <li><strong>Data Science & AI:</strong> Generative AI, Deep Learning, AI Governance, Responsible AI, MLOps, Statistical Analysis, TensorFlow, PyTorch, Scikit-learn, Keras, Hugging Face, LangChain, LangGraph, LangSmith, Langflow, CrewAI, AutoGen, Bee, Supervised ML, Unsupervised ML, NLP, Time Series, Model Development & Deployment, RAG, Vector DB, Prompt Engineering</li>
@@ -408,7 +408,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="section-title"><i class="fas fa-star"></i><span>Core Competencies</span></div>
+          <div class="section-title"><i class="fas fa-list-check"></i><span>Core Competencies</span></div>
           <ul>
             <li>Data Science, Analytics & AI</li>
             <li>Business and Data Analytics</li>
