--- a/test.html
+++ b/test.html
@@ -264,11 +264,11 @@
       </div>
       <div class="contact-info">
         <div class="contact-item">
-          <span class="icon"><i class="fas fa-phone"></i></span>
+          <span class="icon"><i class="fas fa-mobile-screen-button"></i></span>
           <span>+91-9199000200</span>
         </div>
         <div class="contact-item">
-          <span class="icon"><i class="fas fa-envelope"></i></span>
+          <span class="icon"><i class="fas fa-envelope-open-text"></i></span>
           <a href="mailto:ckism.iit@gmail.com">ckism.iit@gmail.com</a>
         </div>
         <div class="contact-item">
