--- a/test.html
+++ b/test.html
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="section">
-          <div class="section-title"><i class="fas fa-lightbulb"></i><span>Key Projects</span></div>
+          <div class="section-title"><i class="fas fa-project-diagram"></i><span>Key Projects</span></div>
           <div class="project">
             <div class="project-title"><strong>MARC (Multi-Agent Resource Coordinator)</strong>, <span class="company-name">IBM</span></div>
             <ul>
