--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
     body {
       font-family: 'Roboto', sans-serif;
       color: var(--text-color);
-      line-height: 1.4;
+      line-height: 1.25; /* Reduced from 1.3 */
       background-color: var(--background-color);
       font-size: 12px;
       font-weight: 400;
@@ -33,7 +33,7 @@
       margin: 0 auto;
       background-color: white;
       box-shadow: 0 6px 24px rgba(0,0,0,0.1);
-      padding: 0 8mm 8mm 8mm;
+      padding: 0 2mm 2mm 2mm;
       position: relative;
       overflow: hidden;
       border-radius: 8px;
@@ -42,21 +42,22 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 2px 6px;
-      margin-bottom: 4px;
+      padding: 1px; /* Reduced from 2px */
+      margin-bottom: 1px; /* Reduced from 2px */
       border-bottom: 2px solid var(--primary-color);
     }
     .profile-section {
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 5px; /* Reduced from 6px */
     }
     .profile-image {
-      width: 48px;
-      height: 48px;
+      width: 64px;
+      height: 64px;
       border-radius: 50%;
       overflow: hidden;
       border: 2px solid var(--border-color);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Added for visual enhancement */
     }
     .profile-image img {
       width: 100%;
@@ -66,12 +67,12 @@
     .profile-image-fallback {
       display: none;
       background-color: var(--light-gray);
-      width: 48px;
-      height: 48px;
+      width: 64px;
+      height: 64px;
       border-radius: 50%;
       text-align: center;
-      line-height: 48px;
-      font-size: 8px;
+      line-height: 64px;
+      font-size: 10px;
       color: #666;
     }
     .profile-details {
@@ -79,22 +80,23 @@
       flex-direction: column;
     }
     .profile-name {
-      font-size: 15px;
+      font-size: 18px;
       font-weight: 700;
       letter-spacing: 0.2px;
       color: var(--text-color);
     }
     .profile-title {
-      font-size: 10px;
+      font-size: 12px;
       font-weight: 700;
       color: var(--accent-color);
     }
     .contact-info {
       display: flex;
       flex-direction: column;
-      gap: 2px;
-      font-size: 9px;
+      gap: 3px; /* Increased from 2px */
+      font-size: 11px; /* Increased from 9px */
       text-align: right;
+      min-width: 120px; /* Added to prevent wrapping */
     }
     .contact-item {
       display: flex;
@@ -104,7 +106,7 @@
     }
     .contact-item .icon {
       color: var(--primary-color);
-      font-size: 9px;
+      font-size: 11px; /* Increased from 9px */
     }
     .contact-item a, .contact-item span {
       color: var(--text-color);
@@ -113,12 +115,12 @@
     }
     .content {
       display: flex;
-      gap: 10px;
-      margin-top: 5px;
+      gap: 7px;
+      margin-top: 2px;
     }
-    .left-column { flex: 6; }
-    .right-column { flex: 4; }
-    .section { margin-bottom: 8px; }
+    .left-column { flex: 8; }
+    .right-column { flex: 6; }
+    .section { margin-bottom: 4px; }
     .section-title {
       font-size: 14px;
       font-weight: 700;
@@ -126,29 +128,29 @@
       text-transform: uppercase;
       border-bottom: 1px solid var(--secondary-color);
       padding-bottom: 2px;
-      margin-bottom: 4px;
+      margin-bottom: 3px;
       letter-spacing: 0.5px;
       display: flex;
       align-items: center;
     }
     .section-title i {
       color: var(--primary-color);
-      margin-right: 1.5mm;
+      margin-right: 1mm;
       font-size: 12px;
     }
     .section-title span {
       color: var(--primary-color);
     }
-    .job, .education-item, .project { margin-bottom: 4px; }
+    .job, .education-item, .project { margin-bottom: 3px; }
     .job-title {
-      font-size: 13px;
+      font-size: 12px;
       font-weight: 600;
       color: var(--text-color);
       display: inline-block;
       width: 100%;
     }
     .school-name, .project-title {
-      font-size: 13px;
+      font-size: 12px;
       font-weight: 600;
       color: var(--text-color);
     }
@@ -161,7 +163,7 @@
     .job-period {
       display: inline-block;
       font-weight: 600;
-      font-size: 12px;
+      font-size: 11px;
       color: #555;
       float: right;
       margin-left: 5px;
@@ -172,27 +174,28 @@
       align-items: baseline;
     }
     .education-details {
-      font-size: 13px;
+      font-size: 12px;
       font-weight: 600;
       color: var(--text-color);
     }
     .education-period {
       font-weight: 600;
-      font-size: 12px;
+      font-size: 11px;
       color: #555;
     }
     ul {
-      padding-left: 15px;
+      padding-left: 13px; /* Reduced from 14px */
       margin: 2px 0;
     }
     li {
       margin-bottom: 2px;
       text-align: justify;
+      font-size: 12px;
     }
     p {
       margin: 2px 0;
       text-align: justify;
-      font-size: 13px;
+      font-size: 12px;
     }
     strong {
       font-weight: 700;
@@ -223,7 +226,7 @@
       .container {
         box-shadow: none;
         margin: 0;
-        padding: 0 8mm 8mm 8mm;
+        padding: 0 2mm 2mm 2mm;
         width: 100%;
         height: 100%;
       }
@@ -236,16 +239,41 @@
     }
     @media (max-width: 768px) {
       .content { flex-direction: column; }
-      .container { width: 95%; }
+      .container {
+        width: 99%;
+        padding: 0 2mm 2mm 2mm;
+      }
       header {
         flex-direction: column;
         align-items: flex-start;
-        gap: 4px;
-        padding: 2px 5px;
+        gap:wi3px;
+        padding: 2px;
       }
-      .contact-info { text-align: left; align-items: flex-start; }
-      .profile-image { width: 40px; height: 40px; }
-      .profile-image-fallback { width: 40px; height: 40px; line-height: 40px; }
+      .contact-info {
+        text-align: left;
+        align-items: flex-start;
+        font-size: 10px; /* Adjusted for mobile */
+        min-width: auto; /* Remove min-width for mobile */
+      }
+      .contact-item .icon {
+        font-size: 10px; /* Adjusted for mobile */
+      }
+      .profile-image {
+        width: 48px;
+        height: 48px;
+      }
+      .profile-image-fallback {
+        width: 48px;
+        height: 48px;
+        line-height: 48px;
+        font-size: 8px;
+      }
+      .profile-name {
+        font-size: 16px;
+      }
+      .profile-title {
+        font-size: 11px;
+      }
     }
   </style>
 </head>
