--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
       --primary-color: #0D47A1;
       --secondary-color: #1976D2;
       --accent-color: #FFCA28;
+      --highlight-color: #1B263B;
       --text-color: #212121;
       --light-gray: #F5F5F5;
       --border-color: #E0E0E0;
@@ -22,9 +23,9 @@
     body {
       font-family: 'Roboto', sans-serif;
       color: var(--text-color);
-      line-height: 1.4;
+      line-height: 1.35;
       background-color: var(--background-color);
-      font-size: 12px;
+      font-size: 12.5px;
       font-weight: 400;
     }
     .container {
@@ -33,17 +34,18 @@
       margin: 0 auto;
       background-color: white;
       box-shadow: 0 6px 24px rgba(0,0,0,0.1);
-      padding: 0 2mm 2mm 2mm; /* Further reduced from 4mm to 2mm */
+      padding: 0 1.5mm 1.5mm 1.5mm;
       position: relative;
       overflow: hidden;
       border-radius: 8px;
+      border: 0.5px solid var(--accent-color);
     }
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 2px 3px; /* Reduced from 4px to 3px */
-      margin-bottom: 2px; /* Reduced from 3px to 2px */
+      padding: 2px 3px;
+      margin-bottom: 2px;
       border-bottom: 2px solid var(--primary-color);
     }
     .profile-section {
@@ -71,7 +73,7 @@
       border-radius: 50%;
       text-align: center;
       line-height: 48px;
-      font-size: 8px;
+      font-size: 10px;
       color: #666;
     }
     .profile-details {
@@ -85,15 +87,15 @@
       color: var(--text-color);
     }
     .profile-title {
-      font-size: 10px;
-      font-weight: 700;
-      color: var(--accent-color);
+      font-size: 11px;
+      font-weight: 600;
+      color: var(--highlight-color);
     }
     .contact-info {
       display: flex;
       flex-direction: column;
       gap: 2px;
-      font-size: 9px;
+      font-size: 10px;
       text-align: right;
     }
     .contact-item {
@@ -104,7 +106,7 @@
     }
     .contact-item .icon {
       color: var(--primary-color);
-      font-size: 9px;
+      font-size: 10px;
     }
     .contact-item a, .contact-item span {
       color: var(--text-color);
@@ -113,44 +115,56 @@
     }
     .content {
       display: flex;
-      gap: 8px; /* Increased from 6px to 8px for clear column separation */
-      margin-top: 2px; /* Reduced from 3px to 2px */
+      gap: 8px;
+      margin-top: 2px;
     }
-    .left-column { flex: 8; } /* Increased from 7 to 8 */
-    .right-column { flex: 6; } /* Increased from 5 to 6 */
-    .section { margin-bottom: 5px; } /* Reduced from 6px to 5px */
+    .left-column { flex: 8; }
+    .right-column { flex: 6; }
+    .section { margin-bottom: 5px; }
     .section-title {
-      font-size: 14px;
+      font-size: 14.5px;
       font-weight: 700;
       color: var(--primary-color);
       text-transform: uppercase;
       border-bottom: 1px solid var(--secondary-color);
       padding-bottom: 2px;
-      margin-bottom: 3px; /* Reduced from 4px to 3px */
+      margin-bottom: 3px;
       letter-spacing: 0.5px;
       display: flex;
       align-items: center;
     }
     .section-title i {
       color: var(--primary-color);
-      margin-right: 1mm;
+      margin-right: 0.8mm;
       font-size: 12px;
     }
     .section-title span {
       color: var(--primary-color);
     }
-    .job, .education-item, .project { margin-bottom: 3px; } /* Reduced from 4px to 3px */
+    .job, .education-item, .project {
+      margin-bottom: 3px;
+      border-bottom: 0.5px solid var(--border-color);
+      padding-bottom: 3px;
+    }
+    .job:last-child, .project:last-child {
+      border-bottom: none;
+    }
+    .job {
+      padding-left: 15px;
+    }
     .job-title {
       font-size: 13px;
       font-weight: 600;
       color: var(--text-color);
       display: inline-block;
       width: 100%;
+      letter-spacing: 0.2px;
     }
     .school-name, .project-title {
       font-size: 13px;
       font-weight: 600;
       color: var(--text-color);
+      padding-left: 15px;
     }
     .project-title .company-name {
       font-weight: 400;
@@ -170,6 +184,7 @@
       display: flex;
       justify-content: space-between;
       align-items: baseline;
+      padding-left: 15px;
     }
     .education-details {
       font-size: 13px;
@@ -185,14 +200,21 @@
       padding-left: 15px;
       margin: 2px 0;
     }
-    li {
-      margin-bottom: 2px;
+    ul li {
+      margin-bottom: 3px;
       text-align: justify;
+      font-size: 12px;
+    }
+    ul li::marker {
+      color: var(--primary-color);
     }
     p {
       margin: 2px 0;
       text-align: justify;
       font-size: 13px;
+    }
+    .section p {
+      padding-left: 15px;
     }
     strong {
       font-weight: 700;
@@ -217,28 +239,30 @@
     #downloadButton:hover {
       background-color: var(--secondary-color);
     }
-    .skills-list ul li { margin-bottom: 3px; }
+    .skills-list ul li { margin-bottom: 2px; }
     @media print {
       body { background: none; }
       .container {
         box-shadow: none;
         margin: 0;
-        padding: 0 2mm 2mm 2mm;
+        padding: 0 1.5mm 1.5mm 1.5mm;
         width: 100%;
         height: 100%;
+        border: none;
       }
       #downloadButton { display: none; }
       header {
         border-bottom: 2px solid var(--primary-color);
       }
       .contact-item a, .contact-item span { color: var(--text-color); }
-      .profile-title { color: var(--accent-color); }
+      .profile-title { color: var(--highlight-color); }
     }
     @media (max-width: 768px) {
       .content { flex-direction: column; }
       .container {
-        width: 99%; /* Increased from 98% to 99% */
-        padding: 0 2mm 2mm 2mm; /* Reduced to 2mm for mobile */
+        width: 99%;
+        padding: 0 1.5mm 1.5mm 1.5mm;
+        border: none;
       }
       header {
         flex-direction: column;
