--- a/test.html
+++ b/test.html
@@ -286,7 +286,7 @@
         </div>
         <div class="profile-details">
           <div class="profile-name">CHANDAN KUMAR</div>
-          <div class="profile-title"><strong>IIT Graduate | Data Scientist</strong></div>
+          <div class="profile-title"><strong>IIT | Super30 | Data Scientist | IBM</strong></div>
         </div>
       </div>
       <div class="contact-info">
